# csidh-rust

./: .gitmodules  Cargo.toml  README.md  build.rs
benches/: ctidh.rs
src/: lib.rs
